<resources>
    <string name="app_name">uropatruljen_app</string>
    <string name="connect">Tilslut wifi</string>
    <string name="login">Login</string>
    <string name="indtast_modelnr"><color name="black">indtast modelnr </color><color name="red">*</color></string>
    <string name="available_wifi">Tilgængelig wifi</string>
    <string name="textinfo">Du har 15 sekunder til at indtaste kodeord og tilslut wifi.</string>
    <string name="uroapp">UroApp</string>
    <string name="logout">Logout</string>
    <string name="start">Start</string>
    <string name="on">Tænd</string>
    <string name="light">light</string>
    <string name="v_lg_musik">Vælg musik:</string>
    <string name="stopMusic">Stop</string>
    <string name="startMusic">Start</string>
    <string name="_00_00">00:00</string>
    <string name="time345">3:45</string>
    <string name="time152">1:52</string>
    <string name="toggleBTN" />
    <string name="lightON">Tænd</string>
    <string name="lightOFF">Sluk</string>
</resources>