<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="@drawable/backgrounduro2022"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/light"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginStart="200dp"
        android:layout_marginTop="280dp"
        android:backgroundTint="@color/uro_orange"
        android:text="@string/toggleBTN"
        android:textColor="@color/white"
        android:textOff="@string/lightON"
        android:textOn="@string/lightOFF"
        android:textSize="30sp"
        android:thumb="@drawable/selector"
        app:showText="true"
        app:track="@drawable/switch_track" />

    <Button
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/uro_orange"
        android:text="@string/start"
        android:layout_marginTop="370dp"
        android:layout_marginStart="200dp"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="117dp"
        android:layout_height="58dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="640dp"
        android:backgroundTint="@color/uro_orange"
        android:text="@string/logout" />

    <ImageView
        android:id="@+id/imageLight"
        android:layout_width="85dp"
        android:layout_height="79dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="260dp"
        android:contentDescription="@string/light"
        app:srcCompat="@drawable/light_icon" />

    <ImageView
        android:id="@+id/imageMusic"
        android:layout_width="60dp"
        android:layout_height="69dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="365dp"
        app:srcCompat="@drawable/music_icon"
        android:contentDescription="@string/light" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="430dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="375dp"
        android:text="@string/_00_00"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:visibility="invisible"
        tools:visibility="visible"/>
</RelativeLayout>